--- a/Automation/Automation.App/MainWindow.xaml
+++ b/Automation/Automation.App/MainWindow.xaml
@@ -1,12 +1,63 @@
-﻿<Window x:Class="Automation.App.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Automation.App"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<adonisControls:AdonisWindow
+    x:Class="Automation.App.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+    xmlns:local="clr-namespace:Automation.App"
+    Title="Automation - test"
+    Height="450"
+    Width="800">
+
+    <Grid Margin="2">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+
+            <GroupBox Header="Class selection">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <TextBox />
+                    <ListBox Margin="0,2,0,0" Grid.Row="1" />
+                </Grid>
+            </GroupBox>
+
+            <GridSplitter
+                Grid.Column="1"
+                Width="2"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
+                Margin="2,0" />
+
+            <GroupBox
+                IsEnabled="False"
+                Header="Actions"
+                Grid.Column="2" />
+        </Grid>
+
+        <GridSplitter
+            Grid.Row="1"
+            Height="2"
+            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
+            Margin="0,2" />
+
+        <GroupBox Header="Output" Grid.Row="2">
+            <ScrollViewer />
+        </GroupBox>
 
     </Grid>
-</Window>
+
+</adonisControls:AdonisWindow>
