--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -11,6 +11,8 @@
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <FontFamily x:Key="FontAwesomeSolid">/Resources/Fonts/FontAwesomeSolid.otf#Font Awesome 6 Free Solid</FontFamily>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
