--- a/Automation/Automation.App/MainWindow.xaml
+++ b/Automation/Automation.App/MainWindow.xaml
@@ -2,15 +2,15 @@
     x:Class="Automation.App.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-    xmlns:local="clr-namespace:Automation.App"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:components="clr-namespace:Automation.App.Base.Components"
+    xmlns:local="clr-namespace:Automation.App"
     Title="Automation - test"
-    Height="450"
-    Width="800">
+    Width="800"
+    Height="450">
 
-    <Grid Margin="2">
+    <Grid Margin="2" DataContext="{Binding TaskContext, RelativeSource={RelativeSource AncestorType=local:MainWindow}}">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
@@ -34,38 +34,75 @@
 
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="auto" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Plugins folder" VerticalAlignment="Center" Margin="0,0,4,0"/>
-                        <components:FolderPicker Grid.Column="1"/>
+                        <TextBlock
+                            Margin="0,0,4,0"
+                            VerticalAlignment="Center"
+                            Text="Plugins folder" />
+                        <components:FolderPicker Grid.Column="1" SelectedFolderPath="{Binding DllFolderPath}"/>
                     </Grid>
-                    <ListBox Margin="0,2,0,0" Grid.Row="1" />
+                    <ListBox Grid.Row="1" Margin="0,2,0,0" ItemsSource="{Binding AvailableClasses}" />
                 </Grid>
             </GroupBox>
 
             <GridSplitter
                 Grid.Column="1"
                 Width="2"
-                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
-                Margin="2,0" />
+                Margin="2,0"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
 
             <GroupBox
-                IsEnabled="False"
-                Header="Actions"
-                Grid.Column="2" />
+                Grid.Column="2"
+                Header="Actions">
+                <GroupBox.Style>
+                    <Style TargetType="GroupBox" BasedOn="{StaticResource {x:Type GroupBox}}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding SelectedClass}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="False" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </GroupBox.Style>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Margin="0,4">Json context</TextBlock>
+                    <TextBox Grid.Row="1" />
+                    <Button
+                        Grid.Row="2"
+                        Margin="0,2,0,0"
+                        HorizontalAlignment="Right">
+                        <StackPanel Orientation="Horizontal">
+
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontFamily="{StaticResource FontAwesomeSolid}"
+                                Text="&#xf04b;" />
+                            <TextBlock Margin="4,0,0,0">Start</TextBlock>
+                        </StackPanel>
+                    </Button>
+                </Grid>
+            </GroupBox>
         </Grid>
 
         <GridSplitter
             Grid.Row="1"
             Height="2"
-            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
-            Margin="0,2" />
+            Margin="0,2"
+            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
 
-        <GroupBox Header="Output" Grid.Row="2">
-            <ScrollViewer />
+        <GroupBox Grid.Row="2" Header="Output">
+            <ScrollViewer Padding="0">
+                <TextBox IsReadOnly="True">
+                    
+                </TextBox>
+            </ScrollViewer>
         </GroupBox>
-
     </Grid>
 
 </adonisControls:AdonisWindow>
