--- a/Automation/Automation.App/MainWindow.xaml
+++ b/Automation/Automation.App/MainWindow.xaml
@@ -17,6 +17,18 @@
         <layout:MainLayout.SideMenu>
             <menus:SideMenu />
         </layout:MainLayout.SideMenu>
+
+        <layout:MainLayout.CurrentPage>
+            <ContentControl
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingDots}}"
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
+                Width="24"
+                Height="24"
+                Focusable="False" />
+        </layout:MainLayout.CurrentPage>
+
     </layout:MainLayout>
 
 </adonisControls:AdonisWindow>
