--- a/Automation/Automation.App/Views/Scope/ScopePage.xaml
+++ b/Automation/Automation.App/Views/Scope/ScopePage.xaml
@@ -1,16 +1,14 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.Menus.SideMenu"
+    x:Class="Automation.App.Views.Scope.ScopePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.Menus"
+    xmlns:local="clr-namespace:Automation.App.Views.Scope"
+    mc:Ignorable="d"
     xmlns:viewModels="clr-namespace:Automation.App.ViewModels"
     xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
-    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance viewModels:SideMenuContext}">
-
+    d:DataContext="{d:DesignInstance base:TaskScope}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,21 +16,32 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-
     <Grid>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBox IsEnabled="False" />
-        <TreeView
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock
+                Margin="4"
+                Text="{Binding Name}"
+                FontWeight="Bold"
+                FontSize="14" />
+
+            <Button Grid.Column="1">
+                <TextBlock Text="&#x2b;" FontFamily="{StaticResource FontAwesomeSolid}" />
+            </Button>
+
+        </Grid>
+        <ListBox
             Grid.Row="1"
-            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
-            MinWidth="200"
-            ItemsSource="{Binding RootScope.Childrens}"
-            SelectedItemChanged="TreeView_SelectedItemChanged"
+            ItemsSource="{Binding Childrens}"
             ItemTemplateSelector="{StaticResource TaskIconSelector}" />
     </Grid>
 </UserControl>
