--- a/Automation/Automation.App/Views/Task/TaskPage.xaml
+++ b/Automation/Automation.App/Views/Task/TaskPage.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Automation.App.Views.Tasks.TaskPage"
+﻿<UserControl x:Class="Automation.App.Views.Task.TaskPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Automation.App.Views.Tasks"
+             xmlns:local="clr-namespace:Automation.App.Views.Task"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
