--- a/Automation/Automation.App/Views/Menus/SideMenu.xaml
+++ b/Automation/Automation.App/Views/Menus/SideMenu.xaml
@@ -5,22 +5,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.Menus"
+    xmlns:components="clr-namespace:Automation.App.Components"
     xmlns:viewModels="clr-namespace:Automation.App.ViewModels"
     xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModels:SideMenuContext}">
-
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Automation.App;component/Components/TaskIcons.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
-
     <Grid>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
@@ -32,7 +23,21 @@
             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
             MinWidth="200"
             ItemsSource="{Binding RootScope.Childrens}"
-            SelectedItemChanged="TreeView_SelectedItemChanged"
-            ItemTemplateSelector="{StaticResource TaskIconSelector}" />
+            SelectedItemChanged="TreeView_SelectedItemChanged">
+            <TreeView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type base:Scope}" ItemsSource="{Binding Childrens}">
+                    <StackPanel Orientation="Horizontal">
+                        <components:ScopedElementIcon Type="Scope" Margin="0,0,4,0" />
+                        <TextBlock Text="{Binding Name}" />
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+                <DataTemplate DataType="{x:Type base:ScopedElement}">
+                    <StackPanel Orientation="Horizontal">
+                        <components:ScopedElementIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                        <TextBlock Text="{Binding Name}" />
+                    </StackPanel>
+                </DataTemplate>
+            </TreeView.Resources>
+        </TreeView>
     </Grid>
 </UserControl>
