--- a/Automation/Automation.App/Views/RouterView.xaml
+++ b/Automation/Automation.App/Views/RouterView.xaml
@@ -1,10 +1,9 @@
 ﻿<UserControl
-    x:Class="Automation.App.Layout.RouterView"
+    x:Class="Automation.App.Views.RouterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Layout"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d">
     <ContentControl
