--- a/Automation/Automation.App/App.xaml
+++ b/Automation/Automation.App/App.xaml
@@ -3,22 +3,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Automation.App"
+    xmlns:converters="clr-namespace:Automation.App.Converters"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Nodify;component/Themes/Dark.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <FontFamily x:Key="FontAwesomeSolid">/Resources/Fonts/FontAwesomeSolid.otf#Font Awesome 6 Free Solid</FontFamily>
+            <converters:EnumToListConverter x:Key="EnumToListConverter" />
 
-            <!--  HACK : fix a binding error  -->
-            <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                <Setter Property="HorizontalContentAlignment" Value="Left" />
-                <Setter Property="VerticalContentAlignment" Value="Top" />
-            </Style>
-            <Style TargetType="TreeViewItem" BasedOn="{StaticResource TreeViewItemStyle}" />
+            <!--  Adonis customization  -->
+            <CornerRadius x:Key="{x:Static adonisUi:Dimensions.CornerRadius}">2</CornerRadius>
+            <Thickness x:Key="{x:Static adonisUi:Dimensions.BorderThickness}">1</Thickness>
 
         </ResourceDictionary>
     </Application.Resources>
