--- a/Automation/Automation.App/Views/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/ScopeUI/ScopePage.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.TaskUI.ScopePage"
+    x:Class="Automation.App.Views.ScopeUI.ScopePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -34,12 +34,12 @@
                                 <components:ScopedElementIcon Type="Scope" Margin="0,0,4,0" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Add workflow">
+                        <MenuItem Header="Add workflow" Click="MenuAddWorkflow_Click">
                             <MenuItem.Icon>
                                 <components:ScopedElementIcon Type="Workflow" Margin="0,0,4,0" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Add task">
+                        <MenuItem Header="Add task" Click="MenuAddTask_Click">
                             <MenuItem.Icon>
                                 <components:ScopedElementIcon Type="Task" Margin="0,0,4,0" />
                             </MenuItem.Icon>
