--- a/Automation/Automation.App/Views/Menus/SideMenu.xaml
+++ b/Automation/Automation.App/Views/Menus/SideMenu.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.Menus"
     xmlns:components="clr-namespace:Automation.App.Components"
-    xmlns:viewModels="clr-namespace:Automation.App.ViewModels"
+    xmlns:viewModels="clr-namespace:Automation.App.Contexts"
     xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
