--- a/Automation/Automation.App/Views/WorkflowUI/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/WorkflowUI/WorkflowPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.WorkflowUI"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
-    <local:WorkflowGraph />
+    xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
+    d:DataContext="{d:DesignInstance base:WorkflowScope}">
+    <local:WorkflowGraph WorkflowScope="{Binding}" />
 </UserControl>
