--- a/Automation/Automation.App/Views/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/ScopeUI/ScopePage.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d"
     xmlns:components="clr-namespace:Automation.App.Components"
-    xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
-    d:DataContext="{d:DesignInstance base:Scope}">
+    xmlns:scopes="clr-namespace:Automation.App.ViewModels.Scopes"
+    d:DataContext="{d:DesignInstance scopes:Scope}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
