--- a/Automation/Automation.App/Views/WorkflowUI/WorkflowGraph.xaml
+++ b/Automation/Automation.App/Views/WorkflowUI/WorkflowGraph.xaml
@@ -6,34 +6,37 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:nodify="clr-namespace:Nodify;assembly=Nodify"
     xmlns:local="clr-namespace:Automation.App.Views.WorkflowUI"
-    xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
+    xmlns:graph="clr-namespace:Automation.App.ViewModels.Graph"
+    xmlns:scopes="clr-namespace:Automation.App.ViewModels.Scopes"
     mc:Ignorable="d">
-    <nodify:NodifyEditor ItemsSource="{Binding WorkflowScope.Nodes, RelativeSource={RelativeSource AncestorType=local:WorkflowGraph}}">
+    <UserControl.DataContext>
+        <graph:EditorViewModel WorkflowScope="{Binding WorkflowScope, RelativeSource={RelativeSource AncestorType=local:WorkflowGraph}}" />
+    </UserControl.DataContext>
+    <nodify:NodifyEditor ItemsSource="{Binding Nodes}" Connections="{Binding Links}">
         <nodify:NodifyEditor.ConnectionTemplate>
-            <DataTemplate DataType="{x:Type base:ElementLink}">
-                <nodify:LineConnection Source="{Binding Source.Anchor}" Target="{Binding Target.Anchor}" />
+            <DataTemplate DataType="{x:Type graph:ElementLink}">
+                <nodify:Connection Source="{Binding Source.Anchor}" Target="{Binding Target.Anchor}" />
             </DataTemplate>
         </nodify:NodifyEditor.ConnectionTemplate>
         <nodify:NodifyEditor.ItemTemplate>
-            <DataTemplate DataType="{x:Type base:TaskScope}">
+            <DataTemplate DataType="{x:Type scopes:TaskScope}">
                 <nodify:Node
                     Header="{Binding Name}"
                     Input="{Binding Inputs}"
                     Output="{Binding Outputs}">
                     <nodify:Node.InputConnectorTemplate>
-                        <DataTemplate DataType="{x:Type base:ElementEndpoint}">
+                        <DataTemplate DataType="{x:Type graph:ElementEndpoint}">
                             <nodify:NodeInput
                                 Header="{Binding Name}"
-                                IsConnected="True"
+                                IsConnected="{Binding IsConnected}"
                                 Anchor="{Binding Anchor, Mode=OneWayToSource}" />
                         </DataTemplate>
                     </nodify:Node.InputConnectorTemplate>
-
                     <nodify:Node.OutputConnectorTemplate>
-                        <DataTemplate DataType="{x:Type base:ElementEndpoint}">
+                        <DataTemplate DataType="{x:Type graph:ElementEndpoint}">
                             <nodify:NodeOutput
                                 Header="{Binding Name}"
-                                IsConnected="True"
+                                IsConnected="{Binding IsConnected}"
                                 Anchor="{Binding Anchor, Mode=OneWayToSource}" />
                         </DataTemplate>
                     </nodify:Node.OutputConnectorTemplate>
