--- a/Automation/Automation.App/Views/WorkflowUI/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/WorkflowUI/WorkflowPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.WorkflowUI"
     mc:Ignorable="d"
-    xmlns:base="clr-namespace:Automation.Base;assembly=Automation.Base"
-    d:DataContext="{d:DesignInstance base:WorkflowScope}">
+    xmlns:scopes="clr-namespace:Automation.App.ViewModels.Scopes"
+    d:DataContext="{d:DesignInstance scopes:WorkflowScope}">
     <local:WorkflowGraph WorkflowScope="{Binding}" />
 </UserControl>
